# SPI-Active

./: .gitattributes  .gitignore  DOWNSTREAM_TASKS.md  README-uv.md  README.md  active_sysid.md  pyproject.toml  requirements.txt
isaac_utils/: pyproject.toml
isaac_utils/isaac_utils/: rotations.py
scripts/: eval.py  mass_landscape.py  mass_opt.py
scripts/config/: all.yaml  jump.yaml  sine.yaml  stand.yaml  walk.yaml
scripts/data/: common.py  jump.py  sine.py  stand.py  walk.py
spigym/: eval_agent.py  run_active_sysid.py  train_agent.py
spigym/agents/base_algo/: base_algo.py
spigym/agents/callbacks/: analysis_plot_force.py  analysis_plot_force_estimator.py  analysis_plot_locomotion.py  analysis_plot_locomotion_estimate_vel.py  analysis_plot_motion_tracking.py
spigym/agents/ppo/: ppo.py
spigym/agents/sysid/: active_sysid.py
spigym/config/algo/: active_sysid.yaml  ppo.yaml  sysid.yaml
spigym/config/domain_rand/: NO_domain_rand.yaml  domain_rand_go2_agile_locomotion.yaml  domain_rand_go2_agile_normal.yaml  domain_rand_go2_only_friction.yaml  domain_rand_unitree_rl_gym_go2_robust.yaml
spigym/config/env/: active_exploration.yaml  active_sysid_openloop.yaml  base_task.yaml  go2_backflip.yaml  go2_block_jump.yaml  go2_jump.yaml  go2_locomotion.yaml  go2_locomotion_jump.yaml  go2_omni.yaml  go2_rp_track.yaml  go2_single_jump.yaml  go2_test.yaml  go2_tracking_sysid.yaml  go2_tracking_with_motor_model.yaml  go2_wtw.yaml  legged_base.yaml
spigym/envs/: downstream_tasks.md
spigym/utils/: config_utils.py  helpers.py  math.py  plotting.py  torch_utils.py
(+116 files in other folders)
